--- a/assets/css/chatbot.css
+++ b/assets/css/chatbot.css
@@ -73,7 +73,7 @@ body.show-chatbot .chatbot {
   position: relative;
   text-align: center;
   color: #fff;
-  background: #0d0d2b;
+  background: #000;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 .chatbot header span {
@@ -87,7 +87,7 @@ body.show-chatbot .chatbot {
 header h2 {
   font-size: 1.4rem;
   overflow: visible;
-  color: #F8398A;
+  color: #DBF95D;
 }
 .chatbot .chatbox {
   overflow-y: auto;
